-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.2.0-rc1
-
RHEL server 5.4, x86_64
-
01fa9f6c15311c2a7397c41a32f001f73a92e811
The toolchain is not detected properly for the experimental gcc4.4 included in RHEL5. This is because the RHEL5 g++44 returns "linux6e" for its OS.
sandbox> uname -a Linux lars00554 2.6.18-164.el5 #1 SMP Tue Aug 18 15:51:48 EDT 2009 x86_64 x86_64 x86_64 GNU/Linux sandbox> g++44 -dumpmachine x86_64-redhat-linux6E sandbox> g++ -dumpmachine x86_64-redhat-linux
This causes the gcctoolchain.cpp guessGccAbi() function to fail to assign a valid os, flavour or format.