gcc: Detect gcc 4.4 on redhat

Task-number: QTCREATORBUG-4690