src/plugins/projectexplorer/gcctoolchain.cpp
@@ -182,7 +182,7 @@ static QList<ProjectExplorer::Abi> guessGccAbi(const QString &m)
     foreach (const QString &p, parts) {
         if (p == QLatin1String("unknown") || p == QLatin1String("pc") || p == QLatin1String("none")
             || p == QLatin1String("gnu") || p == QLatin1String("uclibc")
-            || p == QLatin1String("86_64")) {
+            || p == QLatin1String("86_64") || p == QLatin1String("redhat")) {
             continue;
         } else if (p == QLatin1String("i386") || p == QLatin1String("i486") || p == QLatin1String("i586")
                    || p == QLatin1String("i686") || p == QLatin1String("x86")) {
@@ -201,7 +201,7 @@ static QList<ProjectExplorer::Abi> guessGccAbi(const QString &m)
             arch = ProjectExplorer::Abi::PowerPCArchitecture;
         } else if (p == QLatin1String("w64")) {
             width = 64;
-        } else if (p == QLatin1String("linux")) {
+        } else if (p == QLatin1String("linux") || p == QLatin1String("linux6e")) {
             os = ProjectExplorer::Abi::LinuxOS;
             flavor = ProjectExplorer::Abi::GenericLinuxFlavor;
             format = ProjectExplorer::Abi::ElfFormat;
@@ -872,6 +872,14 @@ void ProjectExplorerPlugin::testGccAbiGuessing_data()
     QTest::newRow("Linux 4")
             << QString::fromLatin1("mipsel-linux-uclibc")
             << (QStringList() << QLatin1String("mips-linux-generic-elf-32bit"));
+    QTest::newRow("Linux 5") // from QTCREATORBUG-4690
+            << QString::fromLatin1("x86_64-redhat-linux6E")
+            << (QStringList() << QLatin1String("x86-linux-generic-elf-64bit")
+                              << QLatin1String("x86-linux-generic-elf-32bit"));
+    QTest::newRow("Linux 6") // from QTCREATORBUG-4690
+            << QString::fromLatin1("x86_64-redhat-linux")
+            << (QStringList() << QLatin1String("x86-linux-generic-elf-64bit")
+                              << QLatin1String("x86-linux-generic-elf-32bit"));
     QTest::newRow("Mingw 1")
             << QString::fromLatin1("i686-w64-mingw32")
             << (QStringList() << QLatin1String("x86-windows-msys-pe-64bit")
